tests/snapshots/examples_fixtures/type_system__failing__91_adt_nested_pattern_binding_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/91_adt_nested_pattern_binding_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/91_adt_nested_pattern_binding_type_mismatch.flx:7:25
  |
7 |         Boxed(Ok(v)) -> v + "x",
  |                         ^^^^^^^
  |                         ------- this expression has type `Int and String`

  |                         ------- operator operands are known at compile time

Note:
  expected type: matching '+' operands (Int+Int, Float+Float, or String+String)
  found type: Int and String

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion
== stdout ==
<not executed>
